      class. Based on a description by Paul Brannon in ruby-talk 79041.
    o Added color_histogram to Image class. (IM 5.5.8, GM 1.1)
    o Added each_profile to Image class. (IM 5.5.8)
    o Added HSLColorspace, HWBColorspace constants (IM 5.5.7, GM 1.0.2)
    o Added CopyCyanCompositeOp, CopyMagentaCompositeOp,
      CopyYellowCompositeOp, CopyBlackCompositeOp constants (IM 5.5.7)
    o Added get_exif_by_entry, get_exif_by_tag to Image class
    o Added fcmp, intensity to Pixel class
    o Added Version_long constant
    o Added Image#tint (IM 5.5.8)
    o Added Image#border!

RMagick 1.3.1
    o Fixed default base URI in the links to the installed xMagick doc
    o Applied the patch for bug #76 that caused the rubyname.rb example
      to hang when installing on FreeBSD.
    o Fixed the <=> method in Image to return nil when the class of the
      other object is not Image
    o Added code to ensure that the `text' argument to Draw#text is not
      nil or empty
    o Fixed the handle_error function to re-initialize the exception
      structure after destroying its contents.

RMagick 1.3.0
    o Added strip!, import_pixels, export_pixels, random_channel_threshold
      to the Image class. (Available only with ImageMagick 5.5.8, which
      is still in beta.)
    o Added black_threshold and white_threshold to the Image class.
    o Added format= attribute writer to the Image class
    o Added monochrome= attribute writer to the Image::Info class
    o Added annotate to the Image class.
    o Made the image argument to get_type_metrics optional. (Thanks to
      Hal Fulton for suggesting this change and the annotate change!)
    o Enhance the read, write, and ping methods in both the Image
      class and the ImageList class to accept an open File object as
      well as a filename argument.
    o Added change_geometry to the Image class
    o Changed configure to generate top-level Makefile with install