@@ -98,7 +98,7 @@
               <tr valign="top">
                 <td>QuantumDepth</td>
                 <td>
-                  The number of bits in a quantum. 
+                  The number of bits in a quantum.
                   <div align="center">
                     <table border="1">
                       <caption>
@@ -213,7 +213,7 @@
                 <td colspan="2">
                   <a name="ClassType"><b>ClassType</b></a> - The
                   ClassType constants specify the image storage
-                  class. 
+                  class.
                   <p>See <a href=
                   "imageattrs.html#Image.class_type">Image#class_type</a></p>
                 </td>
@@ -619,6 +619,14 @@
                 black channel from the composite image to the
                 target image.</td>
               </tr>
+              <tr valign="top">
+                <td>AnnotateCompositeOp</td>
+                <td><span class="imversion">5.5.8 </span>Produce a
+                  visual comparison of two images. If a pixel in the
+                  composite image is different from the corresponding
+                  pixel in the target image, the pixel in the result
+                  image is tinted with red.</td>
+              </tr>
             </tbody>
           </table>
         </td>
@@ -639,7 +647,7 @@
                   available compression types. If the compression
                   type specified is incompatable with the image,
                   &times;Magick selects a compression type
-                  compatable with the image type.</span> 
+                  compatable with the image type.</span>
                   <p>See <a href=
                   "imageattrs.html#Image.compression">Image#compression</a>.</p>
                 </td>
@@ -786,7 +794,7 @@
                   TriangleFilter) may execute much faster but may
                   show artifacts when the image is re-sized or
                   around diagonal lines. The only way to be sure is
-                  to test the filter with sample images.</span> 
+                  to test the filter with sample images.</span>
                   <p>See <a href=
                   "image.html#Image.resize">Image#resize</a>.</p>
                 </td>
@@ -861,7 +869,7 @@
                   region, in other words, you don't need to provide
                   absolute coordinates in order to position an
                   object. A common default for gravity is
-                  <i>NorthWestGravity</i>.</span> 
+                  <i>NorthWestGravity</i>.</span>
                   <p>See <a href=
                   "draw.html#Draw.annotate">Draw#annotate</a> and
                   <a href=
@@ -933,7 +941,7 @@
                   <a name="ImageType"><b>ImageType</b></a> - The
                   ImageType constants indicate <span class=
                   "imquote">the type classification of the
-                  image.</span> 
+                  image.</span>
                   <p>See <a href=
                   "imageattrs.html#Image.image_type">Image#image_type</a>
                   and <a href=
@@ -1007,7 +1015,7 @@
                   For example, interlacing allows images on the Web
                   to be recognizable sooner and satellite images to
                   accumulate/render with image resolution
-                  increasing over time.</span> 
+                  increasing over time.</span>
                   <div class="imquote">
                     Use <i>LineInterlace</i> or
                     <i>PlaneInterlace</i> to create an interlaced
@@ -1059,7 +1067,7 @@
                   <a name="NoiseType"><b>NoiseType</b></a> - The
                   NoiseType constants <span class="imquote">select
                   the type of noise to be added to the
-                  image.</span> 
+                  image.</span>
                   <p>See <a href=
                   "image.html#Image.add_noise">Image#add_noise</a>.</p>
                 </td>
@@ -1127,7 +1135,7 @@
                   <a name="PaintMethod"><b>PaintMethod</b></a> -
                   The PaintMethod constants <span class=
                   "imquote">specify how pixel colors are to be
-                  replaced in the image.</span> 
+                  replaced in the image.</span>
                   <p>See <a href=
                   "image.html#Image.matte_floodfill">Image#matte_floodfill</a>
                   and <a href=
@@ -1180,7 +1188,7 @@
                   concept defined by ICC Spec ICC.1:1998-09, "File
                   Format for Color Profiles". &times;Magick uses
                   RenderingIntent in order to support ICC Color
-                  Profiles.</span> 
+                  Profiles.</span>
                   <p class="imquote">From the specification:
                   "Rendering intent specifies the style of
                   reproduction to be used during the evaluation of
@@ -1239,7 +1247,7 @@
                   <span class="imquote">By default, &times;Magick
                   defines resolutions in pixels per inch.
                   ResolutionType provides a means to adjust
-                  this.</span> 
+                  this.</span>
                   <p>See <a href=
                   "imageattrs.html#Image.units">Image#units</a>.</p>
                 </td>
@@ -1427,12 +1435,12 @@
 </pre>
       Each &times;Magick enumeration type is a separate subclass of
       <code>Enum</code>. For example, the AlignType enumeration is
-      defined as: 
+      defined as:
 <pre>
     class AlignType &lt; Enum
     end
 </pre>
-      The AlignType constants are then created by the code: 
+      The AlignType constants are then created by the code:
 <pre>
     UndefinedAlign = AlignType.new(:UndefinedAlign, 0)
     LeftAlign = AlignType.new(:LeftAlign, 1)
