@@ -1,6 +1,7 @@
 #undef GRAPHICSMAGICK
 #undef HAVE_ACQUIREMAGICKMEMORY
 #undef HAVE_ADAPTIVETHRESHOLDIMAGE
+#undef HAVE_ANNOTATECOMPOSITEOP
 #undef HAVE_APPENDIMAGETOLIST
 #undef HAVE_BLACKTHRESHOLDIMAGE
 #undef HAVE_COPYCYANCOMPOSITEOP
