@@ -6,11 +6,12 @@ RMagick 1.4.0
     o Added HSLColorspace, HWBColorspace constants (IM 5.5.7, GM 1.0.2)
     o Added CopyCyanCompositeOp, CopyMagentaCompositeOp,
       CopyYellowCompositeOp, CopyBlackCompositeOp constants (IM 5.5.7)
+      AnnotateCompositeOp constant (IM 5.5.8)
     o Added get_exif_by_entry, get_exif_by_tag to Image class
     o Added fcmp, intensity to Pixel class
     o Added Version_long constant
-    o Added Image#tint (IM 5.5.8)
-    o Added Image#border!
+    o Added tint method to Image class (IM 5.5.8)
+    o Added border! method to Image class
 
 RMagick 1.3.1
     o Fixed default base URI in the links to the installed xMagick doc
